[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A log-structured file I/O"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
clap = {version = "3.0.0-rc.7", features = ["derive"]}
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"